fix(header): isCollapsed -> isExpanded

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,13 +48,13 @@ body {
 
 header {
   .mobile-contacts {
-    max-height: 100px;
-    transition: max-height 0.3s ease-in;
-  }
-
-  .mobile-contacts.collapsed {
     max-height: 0;
     transition: max-height 0.4s ease-out;
+  }
+
+  .mobile-contacts.expanded {
+    max-height: 100px;
+    transition: max-height 0.3s ease-in;
   }
 }
 
